[package]
name = "lxhkd"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "LinuX HotKey Daemon"
keywords = ["keybind", "hotkey", "remap", "daemon", "x11"]
readme = "README.md"
repository = "https://github.com/lmburns/lxhkd"

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
colored = "2.0.0"
dirs = "4.0.0"
libc = "0.2.104"
linked_hash_set = "0.1.4"
# log = "0.4.14"
# log4rs = "1.0.0"
# nix = "0.23.0"
once_cell = "1.8.0"
# rayon = "1.5.1"
serde = { version = "1.0.27", features = ["derive"] }
thiserror = "1.0.30"
# toml = "0.5.8"
sudo = "0.6.0"
serde_yaml = "0.8.21"

x11 = "2.19.1"
xcb = "0.10.1"
xcb-util = { version = "0.4.0", features = ["keysyms"] }
xkb = "0.2.1"
strum = "0.23.0"
strum_macros = "0.23.1"
better-panic = "0.2.0"

# shellexpand = "2.1.0"

# input-linux = { version = "0.5.0", features = ["with-serde"] }
# uinput-sys = "0.1.7"
# input-linux-sys = "0.7.0"
#
# evdev-rs = { version = "0.5.0", features = ["serde"] }
# evdev = "0.11.1"
# x11rb = "0.9.0"
# xcb = { version = "0.10.1", features = ["xlib_xcb"] }
