[package]
name = "lxhkd"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "LinuX HotKey Daemon"
keywords = ["keybind", "hotkey", "remap", "daemon", "x11"]
readme = "README.md"
repository = "https://github.com/lmburns/lxhkd"

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
clap_generate = "3.0.0-beta.5"
colored = "2.0.0"
dirs = "4.0.0"

bimap = "0.6.1"
# linked_hash_set = "0.1.4"

once_cell = "1.8.0"
serde_yaml = "0.8.21"
serde = { version = "1.0.27", features = ["derive"] }
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"

better-panic = "0.2.0"
regex = "1.5.4"
itertools = "0.10.1"

# Keysyms
xkbcommon = { version = "0.5.0-beta", features = ["x11"] }
# Main X11 library
x11rb = { version = "0.9.0", features = ["xkb", "xtest"] }
# Pretty print tables
cli-table = "0.4.6"
# Determine if user is root
users = "0.11.0"
# Keep order hash
indexmap = { version = "1.7.0", features = ["serde-1"] }

# sudo = "0.6.0"
# log4rs = "1.0.0"
# strum = "0.23.0"
# strum_macros = "0.23.1"

# libc = "0.2.104"
# nix = "0.23.0"

# x11 = { version = "2.19.1", features = ["xlib"] }

# xcb = { version = "1.0.0-beta", features = ["xlib_xcb", "xkb"] }
# xcb-util = { version = "0.4.0", features = ["keysyms"] }

# input-linux = { version = "0.5.0", features = ["with-serde"] }
# uinput-sys = "0.1.7"
# input-linux-sys = "0.7.0"

# evdev-rs = { version = "0.5.0", features = ["serde"] }
# evdev = "0.11.1"
