[package]
name = "lxhkd"
version = "0.1.0"
edition = "2021"
categories = ["command-line-utilities"]
description = "LinuX HotKey Daemon"
keywords = ["keybind", "hotkey", "remap", "daemon", "x11"]
readme = "README.md"
repository = "https://github.com/lmburns/lxhkd"

[features]
default = ["daemon"]
daemon = ["daemonize"]

[dependencies]
daemonize = { version = "0.4.1", optional = true }
anyhow = "1.0.44"
thiserror = "1.0.30"
clap = { version = "3.0.0-rc.3", features = ["derive", "default", "cargo", "wrap_help", "env"] }
clap_generate = "3.0.0-rc.3"
colored = "2.0.0"
dirs = "4.0.0"
bimap = "0.6.1"
once_cell = "1.8.0"
format_serde_error = { version = "0.3", features = ["serde_yaml", "colored"] }
serde_yaml = "0.8.21"
serde = { version = "1.0.27", features = ["derive"] }

log = "0.4.14"
flexi_logger = { version = "0.18", default_features = false, features = ["colors"] }
better-panic = "0.2.0"

regex = "1.5.4"
itertools = "0.10.1"

# Keysyms
xkbcommon = { version = "0.5.0-beta", features = ["x11"] }
# Main X11 library
x11rb = { version = "0.9.0", features = ["xkb", "xtest", "record"] }
# Pretty print tables
cli-table = "0.4.6"
# Keep order hash
indexmap = { version = "1.7.0", features = ["serde-1"] }
shellexpand = "2.1.0"
strip-ansi-escapes = "0.1.1"
nix = "0.23.0"

psutil = { version = "3.2.1", default-features = false, features = ["process"] }
chrono = "0.4.19"

# rayon = "1.5.1"
crossbeam-channel = "0.5.1"
crossbeam-utils = "0.8.7"

[dev-dependencies]
# pretty_assertions = "0.7.1"

[profile.dev.package."*"]
# Set the default for dependencies in Development mode.
opt-level = 3

[profile.dev]
# Turn on a small amount of optimisation in Development mode.
opt-level = 1
